--- a/views/recommend.html
+++ b/views/recommend.html
@@ -5,22 +5,22 @@
 </div>
 
 <div id=container__search>
-    <h2 class="title">Recomendados</h2>
-    <p>Ingresa dos titulos para recibir recomendaciones</p>
+    <h2 class="title">Recommended</h2>
+    <p>Enter two titles to receive recommendations</p>
     <div id="container__search-inputs">
         <div class="container__search-input">
-            <input class="search__input" type="search" name="" id="search__input--1" placeholder="Comienza a escribir un titulo...">
+            <input class="search__input" type="search" name="" id="search__input--1" placeholder="Start typing a title...">
             <div class="search__input--results" style="display: none;"><img class="loading-icon" src="/images/loading-icon.svg" alt=""></div>
         </div>
         <div class="container__search-input">
-            <input class="search__input" type="search" name="" id="search__input--2" placeholder="Comienza a escribir un titulo..."">
+            <input class="search__input" type="search" name="" id="search__input--2" placeholder="Start typing a title...">
             <div class="search__input--results" style="display: none;"><img class="loading-icon" src="/images/loading-icon.svg" alt=""></div>
         </div>
     </div>
     
     <div class="container__platforms">
-        <h4>Filtros</h4>
-        <p>Plataforma (Todas por defecto)</p>
+        <h4>Filters</h4>
+        <p>Plataform (All by default)</p>
         <div class="row">
             <div class="col-md-1 col-3 nopad text-center">
                 <label class="image-checkbox">
@@ -69,18 +69,18 @@
     </div>
 
     <div class="container__release-date">
-        <label for="release-date">Fecha de lanzamiento</label>
+        <label for="release-date">Release date</label>
         <select name="Lanzamiento" id="release-date">
-            <option value="all">Todos</option>
-            <option value="last-2">Ultimos 2 años</option>
-            <option value="last-5">Ultimos 5 años</option>
-            <option value="last-10">Ultimos 10 años</option>
+            <option value="all">All</option>
+            <option value="last-2">Last 2 years</option>
+            <option value="last-5">Last 5 years</option>
+            <option value="last-10">Last 10 years</option>
         </select>
     </div>
 
 
     <div class="container__button-search">
-        <button class="button__search" id="button__search--recommend">Buscar</button>
+        <button class="button__search" id="button__search--recommend">Search</button>
     </div>
 
     <div class="container-fluid">
