--- a/views/home.html
+++ b/views/home.html
@@ -3,9 +3,10 @@
     <video autoplay muted loop playsinline class="video" src="https://media.rawg.io/media/stories/92d/92d070309b4ad98aa48ec6f15eb44259.mp4" ></video>
     <div class="video-overlay"></div>
 </div>
-<!-- Row Populares -->
+
+<!-- Row Popular -->
 <div class="container__cardlists" id="container__cardlists--populares">
-    <h2 class="title" id="title-populares">Populares</h2>
+    <h2 class="title" id="title-populares">Trending</h2>
     <div class="container-fluid card-list d-flex flex-column flex-md-row justify-content-md-center align-content-md-center p-0">
         <div class="card card-item card-item--populares card-background">
             <img class="card-img" src="" alt="">
@@ -37,9 +38,9 @@
         </div>
     </div>
 </div>
-<!-- Row Lanzamientos -->
+<!-- Row Releases -->
 <div class="container__cardlists" id="container__cardlists--lanzamientos">
-    <h2 class="title" id="title-lanzamientos">Lanzamientos</h2>
+    <h2 class="title" id="title-lanzamientos">Releases</h2>
     <div class="container-fluid card-list d-flex flex-column flex-md-row justify-content-md-center align-content-md-center p-0">
         <div class="card card-item card-item--lanzamientos card-background">
             <img class="card-img" src="" alt="">
